--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -109,3 +109,9 @@ jobs:
         export ASEPRITE=$PWD/build/bin/aseprite
         cd tests
         $XVFB bash run-tests.sh
+    - name: upLoad asp
+      uses: actions/upload-artifact@v4
+      with:
+        -name: export
+        -path: |
+          $ASEPRITE
